# tg-bot-portfolio-template

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  release.yml
src/bot/: __init__.py  __main__.py  config.py
src/bot/database/: __init__.py  models.py  repo.py
src/bot/handlers/: __init__.py  admin.py  visitor.py
src/bot/keyboards/: __init__.py  admin.py  common.py
src/bot/locales/en/: main.ftl
src/bot/locales/ru/: main.ftl
src/bot/middlewares/: __init__.py  db.py  i18n.py
src/bot/services/: __init__.py  i18n.py
src/bot/states/: __init__.py  admin.py
tests/: conftest.py  test_config.py  test_i18n.py  test_repo.py
